# llm-translator

./: .gitattributes  .gitignore  .mcp.json  LICENSE  NOTICE.md  README.md  pyproject.toml  run-gui.bat  setup.bat  setup.sh
src/translator/: __init__.py  asr.py  audio.py  cli.py  config.py  devices.py  gui.py  mcp_server.py  mt.py  nllb.py  pipeline.py  tts.py  voices.py  voicevox_tts.py
tests/: test_devices.py  test_pipeline.py  test_voices.py
tools/: pack.py
